--- a/qrcode/pubspec.yaml
+++ b/qrcode/pubspec.yaml
@@ -7,14 +7,18 @@ environment:
   sdk: ^3.6.2
 
 dependencies:
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.0
   flutter_image_compress: ^2.4.0
   image: ^4.5.4
   mobile_scanner: ^6.0.7
   openpgp: ^3.10.1
+  path: ^1.9.0
   qr_code_scanner: ^1.0.1
   qr_flutter: ^4.1.0
+  sqflite: ^2.4.1
   url_launcher: ^6.3.1
 
 
@@ -30,4 +34,6 @@ flutter:
     - family: Raleway
   assets:
     - assets/logo.png
+    - assets/inprogress.png
+
 
